# visarate

./: AGENTS.md  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  python.yml
src/visarate/: __init__.py  api.py  rate.py
tests/: test_api.py  test_rate.py  test_rates.py
visafx/: rate.py
visarate/: __init__.py  rate.py  test_rates.py
