[tool.poetry]
name = "visafx"
version = "0.1.5"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cloudscraper = "^1.2.71"
retry = "^0.9.2"
pydantic = "^1.10.9"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
yapf = "^0.33.0"
toml = "^0.10.2"
pytest = "^7.3.1"
coverage = "^7.2.7"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
