[tool.poetry]
name = "visarate"
version = "0.1.6"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cloudscraper = "^1.2.71"
retry = "^0.9.2"
pydantic = "^2.5.3"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^7.3.1"
ruff = "^0.2.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    # "UP", # pyupgrade
    "W", # pycodestyle warnings

]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
